# Simple-HTTP-Server

./: .gitattribute  .gitignore  CMakeLists.txt  README.md
include/: logger.h  server.h
src/: main.cpp  server.cpp
test/: .index1.html.swp  IMG_2891.MOV
